package main.java.metodosCorreciones;

public interface MetodoCorreccion
{
	public int corregir(int puntaje_total_resolucion, int puntaje_total_parcial);
}
